--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -1,10 +1,9 @@
 .container{
     width:1170px;
+    margin: 0 auto;
 }
 
 nav{
-    
-    float: right;
     height: 50px;
     background-color: aqua;
     font-size: 15px;
