documents utiles html + css start

--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
         <title>Usine Beaumont - Migennes</title>
         <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="assets/css/header.css">
-        <link rel="stylesheet" href="assets/css/main.css">
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/docs.css">
     </head>
 
     <body>
