--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -1,4 +1,5 @@
-<script src="assets/js/main.js"></script>
+<div class="footer"></div>
 
+<script src="assets/js/main.js"></script>
 </body>
 </html>
