loading css files

--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -6,9 +6,10 @@
         <title>Usine Beaumont - Migennes</title>
 
         <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/reset.css">
-        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/header.css">
         <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/main.css">
+        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/header.css">
         <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/footer.css">
+        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/docs.css">
     </head>
 
     <body>
