fix header float

--- a/views/pages/plan.twig
+++ b/views/pages/plan.twig
@@ -1,5 +1,15 @@
 {{ include('partials/header.twig') }}
 
-<h1>Beaumont</h1>
+<div class="plan-title">
+	<h1>Plan d'accèss à l'usine Beaumont</h1>
+</div>
+
+<iframe
+  width="100%"
+  height="600"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBeY1vxcHIf-8Xzf5OJMXNZXLrhJs2g-io	
+    &q=Beaumont+Ets+Sa,migennes&zoom=16" allowfullscreen>
+</iframe>
 
 {{ include('partials/footer.twig') }}
