--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-        <title>Usine Beaumont - Migennes</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <title>Usine Beaumont - Migennes</title>
 
-        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/reset.css">
-        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/main.css">
-        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/header.css">
-        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/footer.css">
-        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/docs.css">
-    </head>
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/reset.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/header.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/footer.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/docs.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/plan.css">
+</head>
 
-    <body>
+<body>
 
+    <section>
         <div class="container">
             <nav>
 
                 <div class="logo-header">
                     <img src="{{ global.request.basepath }}/assets/img/logo-beaumont.png">
                 </div>
-
+                
                 <div class="menu-header">
                     <ul>
                         <li><a href="{{ url('home') }}">Accueil</a></li>
@@ -30,8 +32,8 @@
                         <li><a href="{{ url('contact') }}">Contact</a></li>
                     </ul>
                 </div>
-                
-                <div class="clear"></div>
-            </nav>
 
+            </nav>
         </div>
+        <div class="clear"></div>
+    </section>
