--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -1,5 +1,15 @@
 {{ include('partials/header.twig') }}
 
-<h1>Beaumont</h1>
+<div class="container">
+
+<div class="title-home">
+<h1>Société Beaumont</h1>
+</div>
+
+<div class="slider-home">
+</div>
+
+</div>
+<img src="{{ global.request.basepath }}/assets/img/bannière-écrou.png">
 
 {{ include('partials/footer.twig') }}
