--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/main.css">
         <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/header.css">
         <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/footer.css">
+        <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/home.css">
         <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/docs.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
 
     <body>
@@ -30,7 +32,7 @@
                         <li><a href="{{ url('contact') }}">Contact</a></li>
                     </ul>
                 </div>
-                
+
                 <div class="clear"></div>
             </nav>
 
