--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -5,10 +5,21 @@
 
 html
 {
-	font-family: 'Helvetica';
+	font-family: 'Raleway', sans-serif;
+}
+
+.container{
+    width:1170px;
+    margin:0 auto;
 }
 
 strong
 {
 	font-weight: bold;
+}
+
+h1{
+    font-weight: bold;
+    font-size:36px;
+    color:#2e3689;
 }
