--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -1,26 +1,52 @@
+header
+{
+    -webkit-box-shadow: 0px 2px 12px 0px rgba(0,0,0,0.12);
+    -moz-box-shadow: 0px 2px 12px 0px rgba(0,0,0,0.12);
+    box-shadow: 0px 2px 12px 0px rgba(0,0,0,0.12);
+    margin-bottom: 40px;
+}
+
+.active
+{
+    position: relative;
+}
+
+.active:before
+{
+    transform: translateX(-50%) scaleX(1);
+    transform-origin: 0 0;
+    content: '';
+    position: absolute;
+    z-index: 10;
+    top: 130%;
+    left: 50%;
+    transform-origin: 0 0;
+    width: 70%;
+    height: 3px;
+    background-color: red;
+    transition: all .2s ease-in;
+}
+
 nav{
-    height:60px;
     font-size:15px;
-    line-height: 60px;
+    padding: 30px 0px;
 }
 
 .logo-header{
-    width:30%;
-    height: 100%;
-    float:left;
-    padding-top:10px;
+    width:100%;
 }
 
 .logo-header img{
+    margin-top: -6px;
     height: 40px;
 }
 
 .menu-header{
-    width:70%;
-    float:left;
+    width:100%;
 }
 
 .menu-header ul{
+    float: right;
     display:inline-block;
 }
 
@@ -29,12 +55,32 @@ nav{
 }
 
 .menu-header a{
+    display: inline-block;
+    height: 20px;
     font-size:18px;
     text-decoration:none;
     color:#6c767e;
     padding:0px 30px;
+    position: relative;
 }
 
+.menu-header a:after{
+    transform: translateX(-50%) scaleX(0);
+    transform-origin: 0 0;
+    content: '';
+    position: absolute;
+    z-index: 10;
+    top: 135%;
+    left: 50%;
+    transform-origin: 0 0;
+    width: 70%;
+    height: 3px;
+    background-color: red;
+    opacity: 0.7;
+    transition: all .2s ease-in;
+}
 
-
-
+.menu-header a:hover:after{
+    transform: translateX(-50%) scaleX(1);
+    transform-origin: 0 0;
+}
