--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="logo-header">
-                    <img src="{{ global.request.basepath }}/assets/img/logo-beaumont.png">
+                    <a href="{{ url('home') }}"><img src="{{ global.request.basepath }}/assets/img/logo-beaumont.png"></a>
                 </div>
 
             </nav>
