--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -23,7 +23,7 @@ header
     left: 50%;
     transform-origin: 0 0;
     width: 70%;
-    height: 6px;
+    height: 5px;
     background-color: red;
     transition: all .2s ease-in;
 }
@@ -78,7 +78,7 @@ nav{
     left: 50%;
     transform-origin: 0 0;
     width: 70%;
-    height: 6px;
+    height: 5px;
     background-color: red;
     opacity: 0.7;
     transition: all .2s ease-in;
@@ -128,7 +128,7 @@ nav{
     z-index: 10;
     top: 140%;
     left: 50%;
-    transform-origin: 0 0;
+    transform-origin: 50% 0;
     width: 80%;
     height: 4px;
     background-color: red;
