--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -9,21 +9,24 @@
 </div>
 
 <div class="img-beaumont-home">
-
+    <img src="{{ global.request.basepath }}/assets/img/beaumont.png">
 </div>
 
 <div class="container">
     <div class="presentation-beaumont">
-
         <h1>Découvrir la société Beaumont</h1>
         <div>
             <p>
-                <strong class="presentation-bold">Fabriquant français depuis 1957, les établissements Beaumont sont spécialistes dans la réalisations de sparklets, cartouches, bouteilles et autre conteneurs de gaz très haute pression.</strong><br><br>
+                <strong class="presentation-bold">Fabriquant français depuis 1957, les établissements Beaumont<br> sont spécialistes dans la réalisations de sparklets, cartouches,<br> bouteilles et autre conteneurs de gaz très haute pression.</strong><br><br>
                 Nos produits conçus à MIGENNES (89) sont principalement utilisés dans les domaines de la lutte contre l’incendie, le désenfumage et l’aéronautique.
-                Nous avons acquis la confiance de nombreux partenaires internationaux grâce à notre compétitivité et notre réactivité indipensable aux besoins des marchés actuels.
+                <br>Nous avons acquis la confiance de nombreux partenaires internationaux grâce à notre compétitivité et notre réactivité indipensable aux besoins des marchés actuels.
             </p>
         </div>
 
+        <span class="decouvrir-beaumont">
+            <a {% if page == 'products' %} class="active" {% endif %} href="{{ url('produits') }}">Découvrir nos produits</a>
+        </span>
+        
     </div>
 </div>
 
