--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -1,4 +1,32 @@
-<div class="footer"></div>
+
+<div class="footer">
+    <div class="container">
+        <div class="item-footer">
+            <p><a>Contact</a></p><br>
+            <p><a>Lorem</a><a>Lorem</a>
+            </p>
+        </div>
+        
+        <div class="item-footer">
+            <p><a>Contact</a></p><br>
+            <p><a>Lorem</a><a>Lorem</a>
+            </p>
+        </div>
+        
+        <div class="item-footer">
+            <p><a>Contact</a></p><br>
+            <p><a>Lorem</a><a>Lorem</a>
+            </p>
+        </div>
+        
+        <div class="item-footer">
+            <p><a>Contact</a></p><br>
+            <p><a>Lorem</a><a>Lorem</a>
+            </p>
+        </div>
+    </div>
+</div>
+
 
 <script src="assets/js/main.js"></script>
 </body>
