--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <title>Usine Beaumont - Migennes</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/reset.css">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/main.css">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/header.css">
