--- a/web/assets/css/footer.css
+++ b/web/assets/css/footer.css
@@ -1,5 +1,13 @@
 .footer{
     width:100%;
-    height:80px;
+    height:120px;
     background-color:#2e3689;
+    color:#fefefe;
 }
+
+.footer .item-footer{
+    width:25%;
+    float:left;
+    text-align:center;
+}
+
