--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -36,14 +36,19 @@
 
 .img-beaumont-home{
     width:50%;
-    height:410px;
+    height:550px;
     float:left;
     background-color:#2e3689;
+    overflow:hidden;
+}
+
+.img-beaumont-home img{
+    width:100%;
 }
 
 .presentation-beaumont{
     width:50%;
-    height:410px;
+    height:550px;
     float:left;
     position:relative;
 }
@@ -55,21 +60,47 @@
     margin:65px 0px 0px 30px;
 }
 
+.decouvrir-beaumont{
+    position:absolute;
+    top:71%;
+    left:17%;
+    padding:15px 20px;
+    background-color:#2e3689;
+    color:white;
+    transition: all 0.5s ease 0s;
+}
+
+.decouvrir-beaumont a{
+    text-decoration:none;
+    text-transform:uppercase;
+    font-size:15px;
+    font-weight:bold;
+    flex:1 1 auto;
+}
+
+.decouvrir-beaumont:hover{
+    border:1px #2e3689 solid;
+    background-color:white;
+    color:#2e3689;
+}
+
 .presentation-beaumont div{
     background-color:#f5f5f5;
     position:absolute;
     width:120%;
-    height:200px;
+    height:280px;
     right:0%;
-    top:30%;
+    top:25%;
+    padding:35px 60px;
 }
 
-.presentation-beaumont p{
+.presentation-beaumont div p{
     font-size:16px;
     text-align:center;
     color:#2e3689;
+    line-height:130%;
 }
 
 .presentation-bold{
-    font-size:17px;
+    font-size:18px;
 }
