--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -24,7 +24,7 @@
         </div>
 
         <span class="decouvrir-beaumont">
-            <a {% if page == 'products' %} class="active" {% endif %} href="{{ url('produits') }}">Découvrir nos produits</a>
+            <a {% if page == 'products' %} class="active" {% endif %} href="{{ url('product-ext') }}">Découvrir nos produits</a>
         </span>
         
     </div>
