--- a/views/pages/docs.twig
+++ b/views/pages/docs.twig
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-	<h1 class="docs-title">Les documents utiles ...</h1>
+	<h1 class="title-class">Les documents utiles ...</h1>
 
 	<div class="docs-cards">
 		
