--- a/views/pages/plan.twig
+++ b/views/pages/plan.twig
@@ -1,6 +1,6 @@
 {{ include('partials/header.twig') }}
 
-<div class="plan-title">
+<div class="title-class">
 	<h1>Plan d'accèss à l'usine Beaumont</h1>
 </div>
 
