--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -80,7 +80,7 @@
 
 .decouvrir-beaumont:hover{
     border:1px #2e3689 solid;
-    background-color:white;
+    background-color:#fefefe;
     color:#2e3689;
 }
 
