--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/home.css">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/docs.css">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/plan.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/contact.css">
 </head>
 
 <body>
