--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -5,7 +5,7 @@
 
 html
 {
-	font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .container{
@@ -15,5 +15,15 @@ html
 
 strong
 {
-	font-weight: bold;
+    font-weight: bold;
 }
+
+.title-class 
+{
+    text-align: center;
+    margin:30px 0px;
+    font-size:28px;
+    color:#2e3689;
+}
+
+
