--- a/views/pages/product-ext.twig
+++ b/views/pages/product-ext.twig
@@ -1,5 +1,32 @@
 {{ include('partials/header.twig') }}
 
-<h1>ext</h1>
+<section class="ext-info">
+	<div class="container">
+		<h1>Nos produits correspondent à des standards issus des besoins de nos <br> nombreux clients.</h1>
+		<p>L'experience qui est la notre ajoutée à notre capacité de fabrication, nous permet de concevoir rapidement des produits liés à de nouveaux concepts, alors n'hésitez pas à prendre contact avec nous. Toute notre fabrication est conforme aux réglementations européennes et à d'autres exigences normatives selon les domaines d'utilisation.</p>
+	</div>
+</section>
+
+<section class="ext-product">
+	<div class="ext-background">
+		<div class="ext-content">
+			<h1><strong>EXTINCTEUR</strong></h1>
+			<p>Notre gamme de cartouche couvre une partie très importante des besoins dans le domaine de l'extincteur, tant par les diamètres que par le filetage des écrous.</p>
+			<p><strong>Nos produits répondent aux exigence <br> de l'EN3-8.</strong></p>
+		</div>
+	</div>
+	<div class="ext-slider">
+		<div class="slider-control">left</div>
+		<div class="slider-img">
+			<img src="{{global.request.basepath}}/assets/img/extinguisher-01.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/extinguisher-02.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/extinguisher-03.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/extinguisher-04.jpg" alt="">
+		</div>
+		<div class="slider-control">right</div>
+		<div class="clear"></div>
+	</div>
+	<div class="clear"></div>
+</section>
 
 {{ include('partials/footer.twig') }}
