--- a/web/assets/css/docs.css
+++ b/web/assets/css/docs.css
@@ -12,7 +12,7 @@
 .docs-card
 {
 	width: 400px;
-	background-color: #eee;
+	background-color: #f5f5f5;
 	text-align: center;
 	padding: 20px 0px;
 }
