--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -7,27 +7,6 @@ header
     z-index: 100;
 }
 
-.active
-{
-    position: relative;
-}
-
-.active:before
-{
-    transform: translateX(-50%) scaleX(1);
-    transform-origin: 0 0;
-    content: '';
-    position: absolute;
-    z-index: 10;
-    top: 100%;
-    left: 50%;
-    transform-origin: 0 0;
-    width: 70%;
-    height: 5px;
-    background-color: red;
-    transition: all .2s ease-in;
-}
-
 nav{
     font-size:15px;
     padding-top: 50px;
@@ -102,6 +81,7 @@ nav{
     text-align: center;
     background-color: #fefefe;
     height: 0;
+    padding: 10px;
     overflow: hidden;
     transition: all .2s ease-out .2s;
     will-change: height;
@@ -109,7 +89,7 @@ nav{
 
 .menu-header > ul > li > ul > li{
     display: block;
-    padding: 20px 0px;
+    padding: 30px 0px;
     width: 100%;
 }
 
@@ -129,7 +109,7 @@ nav{
     top: 140%;
     left: 50%;
     transform-origin: 50% 0;
-    width: 80%;
+    width: 90%;
     height: 4px;
     background-color: red;
     opacity: 0.7;
@@ -137,5 +117,28 @@ nav{
 }
 
 .menu-header > ul > li:hover > ul{
-    height: 200px;
+    height: 240px;
+}
+
+.active
+{
+    position: relative;
+    color: #2e3689!important;
+    font-weight: bold;
+}
+
+.active:before
+{
+    transform: translateX(-50%) scaleX(1);
+    transform-origin: 0 0;
+    content: '';
+    position: absolute;
+    z-index: 10;
+    top: 100%;
+    left: 50%;
+    transform-origin: 0 0;
+    width: 70%;
+    height: 5px;
+    background-color: red;
+    transition: all .2s ease-in;
 }
