--- a/views/pages/product-des.twig
+++ b/views/pages/product-des.twig
@@ -1,5 +1,36 @@
 {{ include('partials/header.twig') }}
 
-<h1>des</h1>
+<section class="des-info">
+	<div class="container">
+		<h1>Nos produits correspondent à des standards issus des besoins de nos <br> nombreux clients.</h1>
+		<p>
+L’expérience qui est la notre ajoutée à notre capacité de fabrication, nous permet de concevoir rapidement des produits liés à de nouveaux concepts, alors n’hésitez pas à prendre contact avec nous.
+Toute notre fabrication est conforme aux réglementations européennes et à d’autres exigences normatives selon les domaines d’utilisation.</p>
+	</div>
+</section>
+
+<section class="des-product">
+	<div class="des-background">
+		<div class="des-content">
+			<h1><strong>DÉSENFUMAGE</strong></h1>
+			<p>Nos produits couvrent les besoins liés à l’alimentation des coffrets avec des cartouches 50°C équipées d’un filetage M15x125. Ils couvrent également toutes la gamme liée aux thermodéclencheurs, c'est-à-dire les températures supérieures à 50° avec un filetage M21,7x1,814</p>
+			<p><strong>Nos produits répondent aux exigences <br> de la NFS 61939</strong></p>
+		</div>
+	</div>
+	<div class="des-slider">
+		<div class="slider-control left-control"><img src="{{global.request.basepath}}/assets/img/arrow-l.png" alt=""></div>
+		<div class="slider-img">
+			<img src="{{global.request.basepath}}/assets/img/des-01.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/des-02.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/des-03.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/des-04.jpg" alt="">
+			<img src="{{global.request.basepath}}/assets/img/des-05.jpg" alt="">
+		</div>
+		<div class="slider-control right-control"><img src="{{global.request.basepath}}/assets/img/arrow-r.png" alt=""></div>
+		<div class="clear"></div>
+	</div>
+	<div class="clear"></div>
+</section>
 
 {{ include('partials/footer.twig') }}
+	
