--- a/views/pages/product-ext.twig
+++ b/views/pages/product-ext.twig
@@ -16,14 +16,14 @@
 		</div>
 	</div>
 	<div class="ext-slider">
-		<div class="slider-control">left</div>
+		<div class="slider-control left-control"><img src="{{global.request.basepath}}/assets/img/arrow-l.png" alt=""></div>
 		<div class="slider-img">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-01.jpg" alt="">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-02.jpg" alt="">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-03.jpg" alt="">
 			<img src="{{global.request.basepath}}/assets/img/extinguisher-04.jpg" alt="">
 		</div>
-		<div class="slider-control">right</div>
+		<div class="slider-control right-control"><img src="{{global.request.basepath}}/assets/img/arrow-r.png" alt=""></div>
 		<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
