--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -28,6 +28,6 @@
 </div>
 
 
-<script src="assets/js/main.js"></script>
+<script src="{{global.request.basepath}}/assets/js/main.js"></script>
 </body>
 </html>
