--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/docs.css">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/plan.css">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/ext.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/des.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/des.css">
+    <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/other.css">
     <link rel="stylesheet" href="{{ global.request.basepath }}/assets/css/contact.css">
 </head>
 
