--- a/web/assets/css/other.css
+++ b/web/assets/css/other.css
@@ -1,4 +1,4 @@
-.ext-info
+.other-info
 {
 	background-color: #f5f5f5;
 	color: #2e3689;
@@ -7,7 +7,7 @@
 	margin-bottom: 40px;
 }
 
-.ext-info h1
+.other-info h1
 {
 	font-size:28px;
   font-weight:bold;
@@ -15,22 +15,22 @@
   line-height: 130%;
 }
 
-.ext-info p
+.other-info p
 {
 	font-size:18px;
 	line-height: 130%;
 }
 
-.ext-background
+.other-background
 {
 	height: 800px;
 	width: 50%;
 	float: left;
-	background-image: url(../img/extinguisher-bg.png);
+	background-image: url(../img/other-bg.jpg);
 	position: relative;
 }
 
-.ext-content
+.other-content
 {
 	position: absolute;
 	top: 50%;
@@ -44,58 +44,21 @@
 	padding: 0 40px;
 }
 
-.ext-content h1
+.other-content h1
 {
 	margin-top: -40px;
 	font-size: 32px;
 	margin-bottom: 70px;
 }
 
-.ext-content p
+.other-content p
 {
 	margin-bottom: 30px;
 	font-size: 18px;
 }
 
-.ext-slider
+.other-slider
 {
 	width: 50%;
 	float: left;
-}
-
-.slider-control
-{
-	position: relative;
-	width: 10%;
-	float: left;
-	height: 550px;
-}
-
-.slider-control img
-{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.slider-img 
-{
-	position: relative;
-	width: 40%;
-	float: left;
-	height: 550px;
-	overflow: hidden;
-}
-
-.slider-img img
-{
-	position: absolute;
-	width: 120%;
-	transition: all .7s ease-in;
-}
-
-.slider-control img
-{
-	width: 30%;
 }
