contact footer front

--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -2,25 +2,25 @@
 <div class="footer">
     <div class="container">
         <div class="item-footer">
-            <p><a>Contact</a></p><br>
+            <p><a class="title-footer">Contact</a></p><br>
             <p><a>Lorem</a><a>Lorem</a>
             </p>
         </div>
         
         <div class="item-footer">
-            <p><a>Contact</a></p><br>
+            <p><a class="title-footer">Bureaux</a></p><br>
             <p><a>Lorem</a><a>Lorem</a>
             </p>
         </div>
         
         <div class="item-footer">
-            <p><a>Contact</a></p><br>
+            <p><a class="title-footer">Logistique</a></p><br>
             <p><a>Lorem</a><a>Lorem</a>
             </p>
         </div>
         
         <div class="item-footer">
-            <p><a>Contact</a></p><br>
+            <p><a class="title-footer">Email</a></p><br>
             <p><a>Lorem</a><a>Lorem</a>
             </p>
         </div>
