--- a/web/assets/css/docs.css
+++ b/web/assets/css/docs.css
@@ -1,38 +1,61 @@
 
 .docs-cards
 {
-	width: 75%;
-	margin: 0 auto;
+    width: 55%;
+    margin: 0 auto;
 }
 
 .docs-card
 {
-	width: 400px;
-	background-color: #f5f5f5;
-	text-align: center;
-	padding: 20px 0px;
+    width: 300px;
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 20px 0px;
+    margin-bottom:50px;
 }
 
 .docs-card:nth-child(0)
 {
-	float: left;
+    float: left;
 }
 
 .docs-card:nth-child(1)
 {
-	float: right;
+    float: right;
+}
+
+.docs-card:nth-child(1) .docs-card-top img
+{
+    height: 63px;
+}
+
+.docs-card-bot-line img{
+    width:22px;
 }
 
 .docs-card-bot
 {
-	width: 90%;
-	margin: 0 auto;
-	background-color: #fff;
+    width: 90%;
+    margin: 0 auto;
+    background-color: #fff;
+    height: 240px;
 }
 
 .docs-card-bot-line
 {
-	width: 95%;
-	margin: 0 auto;
-	border-bottom: 1px solid #eee;
+    width: 95%;
+    margin: 0 auto;
+    padding:15px 0px 10px 0px;
+    border-bottom: 1px solid #eee;
+    height: 60px;
+}
+
+.docs-card-top{
+    margin-bottom:25px;
+    color:#2e3689;
+    font-size:22px;
+}
+
+.docs-card-top img{
+    margin-bottom:20px;
 }
