--- a/views/pages/contact.twig
+++ b/views/pages/contact.twig
@@ -7,27 +7,29 @@
         <div class="form-contact">
             {{ form_start(contact_form) }}
 
-            <div class="form-1">
+            <div class="form-1 form-left">
                 <label> Société </label>
-                <div>{{ form_widget(contact_form.entreprise) }}</div>
+                <div class="inputs">{{ form_widget(contact_form.entreprise, {'attr' : {'index' : '0'}}) }}</div>
 
                 <label> Email </label>
-                <div>{{ form_widget(contact_form.email) }}</div>
+                <div class="inputs">{{ form_widget(contact_form.email, {'attr' : {'index' : '1'}}) }}</div>
             </div>
 
-            <div class="form-1" >
+            <div class="form-1 form-right">
                 <label> Nom / Prenom </label>
-                <div>{{ form_widget(contact_form.name) }}</div>
-
+                <div class="inputs right-input">{{ form_widget(contact_form.name, {'attr' : {'index' : '2'}}) }}</div>
+                <div class="clear"></div>
 
                 <label> Téléphone </label>
-                <div>{{ form_widget(contact_form.tel) }}</div>
+                <div class="inputs right-input">{{ form_widget(contact_form.tel, {'attr' : {'index' : '3'}}) }}</div>
+                <div class="clear"></div>
+
             </div>
             <div class="clear"></div>
 
             <div class="form-2">
                 <label> Commentaire </label>
-                <div>{{ form_widget(contact_form.body) }}</div>
+                <div>{{ form_widget(contact_form.body, {'attr' : {'index' : '4'}}) }}</div>
             </div>
         </div>
 
