--- a/web/assets/css/contact.css
+++ b/web/assets/css/contact.css
@@ -27,15 +27,44 @@ form{
 .form-1{
     width:50%;
     height:200px;
-    float:left;
     color:#2e3689;
+    float:left;
 }
 
-.form-1 div{
+
+.form-1 .inputs{
     width:80%;
     height:40px;
     background-color:#fefefe;
+}
+
+.form-1 input{
+    width:100%;
+    height:100%;
+    padding-left:10px;
     border: 1px solid #2e3689;
+}
+
+.form-1 input:focus{
+   border: 1px solid red;
+}
+
+.inputs{
+    margin-bottom:20px;
+}
+
+.form-1 label{
+    display:inline-block;
+    margin-bottom:7px;
+}
+
+.form-right .right-input{
+    float:right;
+}
+
+.form-right label{
+    float:right;
+    width:80%;
 }
 
 .form-2{
@@ -44,12 +73,29 @@ form{
     color:#2e3689;
 }
 
+.form-2 textarea{
+    height:100%;
+    width:100%;
+    resize:none;
+    padding:10px 0px 0px 10px;
+    border: 1px solid #2e3689;
+}
+
+.form-2 textarea:focus{
+    border: 1px solid red;
+}
+
 .form-2 div{
     width:125%;
     height:200px;
     background-color:#fefefe;
-    border: 1px solid #2e3689;
 }
+
+.form-2 label{
+    display:inline-block;
+    margin-bottom:7px;
+}
+
 
 .button-form{
     background-color:#2e3689;
