--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -10,6 +10,7 @@ html
 
 .container{
     width:1170px;
+    height: 100%;
     margin:0 auto;
 }
 
@@ -24,6 +25,7 @@ strong
     margin:30px 0px;
     font-size:28px;
     color:#2e3689;
+    font-weight:bold;
 }
 
 
