other + slider speed

--- a/views/pages/product-ext.twig
+++ b/views/pages/product-ext.twig
@@ -12,7 +12,7 @@
 		<div class="ext-content">
 			<h1><strong>EXTINCTEUR</strong></h1>
 			<p>Notre gamme de cartouche couvre une partie très importante des besoins dans le domaine de l'extincteur, tant par les diamètres que par le filetage des écrous.</p>
-			<p><strong>Nos produits répondent aux exigence <br> de l'EN3-8.</strong></p>
+			<p><strong>Nos produits répondent aux exigence de l'EN3-8.</strong></p>
 		</div>
 	</div>
 	<div class="ext-slider">
