--- a/web/assets/css/other.css
+++ b/web/assets/css/other.css
@@ -26,7 +26,7 @@
 	height: 800px;
 	width: 50%;
 	float: left;
-	background-image: url(../img/other-bg.jpg);
+	background-image: url(../img/other-bg.png);
 	position: relative;
 }
 
