--- a/views/pages/plan.twig
+++ b/views/pages/plan.twig
@@ -1,7 +1,7 @@
 {{ include('partials/header.twig') }}
 
 <div class="title-class">
-	<h1>Plan d'accèss à l'usine Beaumont</h1>
+	<h1>Plan d'accès à l'usine Beaumont</h1>
 </div>
 
 <div class="plan-map-container">
