--- a/views/pages/product-oth.twig
+++ b/views/pages/product-oth.twig
@@ -10,7 +10,7 @@
 <section class="other-product">
 	<div class="other-background">
 		<div class="other-content">
-			<h1><strong>AUTRES</strong></h1>
+			<h1><strong>AUTRES PRODUITS</strong></h1>
 			<p>Notre gamme de cartouche couvre une partie très importante des besoins dans le domaine de l'extincteur, tant par les diamètres que par le filetage des écrous.</p>
 			<p><strong>Nos produits répondent aux exigence de l'EN3-8.</strong></p>
 		</div>
